--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,8 @@ find_package(SDL2_ttf REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS})
 
 add_executable(${PNAME} Main.c)
-target_link_libraries(${PNAME} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2TTF_LIBRARY} m)
+set(MATHLIB m)
+if ( MSVC )
+	set(MATHLIB "")
+endif()
+target_link_libraries(${PNAME} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2TTF_LIBRARY} ${MATHLIB})
